[tool.poetry]
name = "promptsage"
version = "0.0.1"
description = "Promptsage helps you combine all the components of your prompt into a single LLM-ready payload"
authors = ["Alex Mavrogiannis <almavrog@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "^3.1.3"
pytest = "^8.1.1"
langchain = "^0.1.12"

[tool.poetry.group.dev.dependencies]
langchain-openai = "^0.0.8"
faiss-cpu = "^1.8.0"
tiktoken = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
